# vinglish

./: .gitignore  .vinglish_interfaces.tmp  Cargo.toml  README.md  a.c  architecture.html  calc  clean_diag.py  englist_logo.py  extract_css.py  factorial.eng  file_io  fix.py  fix3.py  fix4.py  fix5.py  fix_copy_prop.py  fix_crates.sh  fix_dce.py  fix_deps.sh  fix_diag.py  fix_ext.sh  fix_gvn.py  fix_mir_lower.py  fix_mir_lower_2.py  fix_mir_lower_3.py  fix_mir_lower_4.py  fix_mir_lower_5.py  fix_pass_manager.py  fix_passes.py  fix_rename.py  fix_rename_2.py  fix_span.py  fix_stmts.py  fix_traits.py  fix_type_pass.py  fix_type_pass2.py  fix_validator.py  index.html  install.sh  (+56 more)
.eng_modules/external_pkg/: external_pkg.ving
.github/workflows/: benchmarks.yml
bench_out/: fibonacci  prime_sieve
benchmarks/: elm.json  factorial.ving  fibonacci.elm  fibonacci.eng
crates/eng-analysis/: Cargo.toml
crates/eng-analysis/src/: alias.rs  escape.rs  lib.rs  lifetime.rs  promotion.rs  validator.rs
crates/eng-cli/: Cargo.toml
crates/eng-cli/src/: main.rs
crates/eng-codegen/: Cargo.toml
crates/eng-codegen/src/: backend.rs  interp.rs  lib.rs  lower.rs
crates/eng-diagnostics/: Cargo.toml
crates/eng-diagnostics/src/: diagnostic.rs  lib.rs  renderer.rs
crates/eng-fmt/: Cargo.toml
crates/eng-fmt/src/: formatter.rs
crates/eng-hir/: Cargo.toml
crates/eng-hir/src/: lib.rs  symbol.rs  types.rs
crates/eng-lexer/: Cargo.toml
crates/eng-lexer/src/: lexer.rs  lib.rs  span.rs  token.rs
crates/eng-llvm/: Cargo.toml
crates/eng-llvm/src/: builtins.rs  codegen.rs  emit.rs  lib.rs  types.rs
crates/eng-lsp/: Cargo.toml
crates/eng-lsp/src/: lib.rs  main.rs
crates/eng-mir/: Cargo.toml
crates/eng-mir/src/: lib.rs  validator.rs
crates/eng-opt/: Cargo.toml
crates/eng-opt/src/: cfg_simplify.rs  constant_folding.rs  constant_prop.rs  copy_prop.rs  dce.rs  gvn.rs  lib.rs
crates/eng-own/: Cargo.toml
crates/eng-own/src/: analysis.rs  diagnostics.rs  graph.rs  lib.rs  state.rs  validator.rs
crates/eng-ownership/: Cargo.toml
crates/eng-ownership/src/: checker.rs
crates/eng-parser/: Cargo.toml
crates/eng-parser/src/: ast.rs  error.rs  parser.rs
crates/eng-ssa/: Cargo.toml
crates/eng-ssa/src/: dominators.rs  lib.rs  phi.rs  rename.rs  validator.rs
crates/eng-types/: Cargo.toml
crates/eng-types/src/: env.rs  lib.rs  mir_lower.rs  passes.rs  type_pass.rs  validator.rs
crates/vinglish-analysis/: Cargo.toml
crates/vinglish-analysis/src/: alias.rs  escape.rs  lib.rs  lifetime.rs  promotion.rs  validator.rs
crates/vinglish-cli/: Cargo.toml
crates/vinglish-cli/src/: main.rs
crates/vinglish-codegen/: Cargo.toml
crates/vinglish-codegen/src/: backend.rs  codegen_stress.rs  interp.rs  lib.rs  lower.rs  mir_codegen.rs
crates/vinglish-decompile/: Cargo.toml
crates/vinglish-decompile/src/: lib.rs  stress_tests.rs
crates/vinglish-diagnostics/: Cargo.toml
crates/vinglish-diagnostics/src/: diagnostic.rs  intent.rs  lib.rs  renderer.rs
crates/vinglish-diagnostics/src/heuristics/: lexical.rs  mod.rs  polyglot.rs
crates/vinglish-fmt/: Cargo.toml
crates/vinglish-fmt/src/: formatter.rs  lib.rs
crates/vinglish-hir/: Cargo.toml
crates/vinglish-hir/src/: layout.rs  layout_stress.rs  lib.rs  symbol.rs  types.rs
crates/vinglish-ir-export/: Cargo.toml
crates/vinglish-ir-export/src/: lib.rs
crates/vinglish-lexer/: Cargo.toml
crates/vinglish-lexer/src/: lexer.rs  span.rs  token.rs
crates/vinglish-llvm/: Cargo.toml
crates/vinglish-llvm/src/: codegen.rs  lib.rs  types.rs
crates/vinglish-lsp/: Cargo.toml
crates/vinglish-lsp/src/: lib.rs  main.rs
crates/vinglish-macro/: Cargo.toml
crates/vinglish-macro/src/: lib.rs
crates/vinglish-mir/: Cargo.toml
crates/vinglish-mir/src/: lib.rs  validator.rs
crates/vinglish-opt/: Cargo.toml
crates/vinglish-opt/src/: cfg_simplify.rs  constant_folding.rs  constant_prop.rs  copy_prop.rs  dce.rs  gvn.rs  lib.rs
crates/vinglish-own/: Cargo.toml
crates/vinglish-own/src/: analysis.rs  diagnostics.rs  graph.rs  lib.rs  state.rs  validator.rs
crates/vinglish-ownership/: Cargo.toml
crates/vinglish-ownership/src/: checker.rs  lib.rs
crates/vinglish-parser/: Cargo.toml
crates/vinglish-parser/src/: ast.rs  error.rs  parser.rs
crates/vinglish-ssa/: Cargo.toml
crates/vinglish-ssa/src/: dominators.rs  lib.rs  phi.rs  rename.rs  validator.rs
crates/vinglish-types/: Cargo.toml
crates/vinglish-types/src/: env.rs  healer.rs  healer_stress.rs  lib.rs  mir_lower.rs  passes.rs  type_pass.rs  validator.rs
docs/: architecture.md  language_guide.md  playground.md  standard_library.md
docs/architecture/: reversible-compilation.md  semantic-export.md
examples/: 20_maps.eng  21_networking.eng  21_networking.ving  errors_own.ving  errors_own_all.ving  errors_syntax.ving  errors_type.ving  fibonacci.eng  fibonacci.ving  finance.eng  finance.ving  hello.eng  hello.ving  mir_test.eng  opt_test.ving  patterns.ving  skyline_runner.ving  structs.ving  ui_test.ving
lib/std/: fs.eng  io.eng  math.eng  string.eng
my_a.out.dSYM/Contents/: Info.plist
my_a.out.dSYM/Contents/Resources/DWARF/: my_a.out
my_a.out.dSYM/Contents/Resources/Relocations/aarch64/: my_a.out.yml
rt/: eng_file.c  eng_io.c  eng_map.c  eng_net.c  eng_runtime.c  eng_string.c  eng_subprocess.c  eng_term.c  eng_thread.c  eng_ui.c
rt_rust/: Cargo.toml
rt_rust/src/: lib.rs
std/: file.ving  io.eng  io.ving  math.eng  net.eng  net.ving  runtime.ving  string.eng  string.ving  subprocess.ving  term.ving  thread.ving  ui.ving
std/collections/: map.eng  vector.eng
stdlib/: core.eng
tests/: test_borrow.eng  test_borrow_primitive.ving  test_generic2.ving  test_generics.ving  test_result.ving  test_string_concat.ving  test_struct.eng
vinglish-studio/: README.md  eng.toml  index.html
vinglish-studio/studio/: colors.ving  demo.ving  layout.ving  main.ving  render.ving  ui.ving
