[workspace]
members = [
    "crates/vinglish-cli",
    "crates/vinglish-lexer",
    "crates/vinglish-parser",
    "crates/vinglish-types",
    "crates/vinglish-ownership",
    "crates/vinglish-diagnostics",
    "crates/vinglish-codegen",
    "crates/vinglish-fmt",
    "crates/vinglish-hir", "crates/vinglish-mir", "crates/vinglish-opt", "crates/vinglish-own", "crates/vinglish-ssa", "crates/vinglish-analysis", "crates/vinglish-llvm", "crates/vinglish-lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Vinglish Team"]
license = "MIT"
description = "The Vinglish intent-aware systems programming language"

[workspace.dependencies]
thiserror       = "1.0"
clap            = { version = "4", features = ["derive"] }
indexmap        = "2"
strsim          = "0.11"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
