[package]
name        = "eng-cli"
version.workspace    = true
edition.workspace    = true
description = "eng — the Englist compiler driver"

[[bin]]
name = "eng"
path = "src/main.rs"

[dependencies]
eng-lexer      = { path = "../eng-lexer" }
eng-parser     = { path = "../eng-parser" }
eng-types      = { path = "../eng-types" }
eng-ownership  = { path = "../eng-ownership" }
eng-diagnostics= { path = "../eng-diagnostics" }
eng-codegen    = { path = "../eng-codegen" }
eng-fmt        = { path = "../eng-fmt" }
eng-mir        = { path = "../eng-mir" }
eng-opt        = { path = "../eng-opt" }
eng-own        = { path = "../eng-own" }
eng-ssa        = { path = "../eng-ssa" }
clap.workspace = true
eng-hir = { path = "../eng-hir" }
eng-analysis = { path = "../eng-analysis" }
eng-llvm = { path = "../eng-llvm" }
eng-lsp = { version = "0.1.0", path = "../eng-lsp" }
tokio = { version = "1.52.3", features = ["full"] }
