[package]
name = "eng-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
eng-diagnostics = { version = "0.1.0", path = "../eng-diagnostics" }
eng-lexer = { version = "0.1.0", path = "../eng-lexer" }
eng-parser = { version = "0.1.0", path = "../eng-parser" }
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
