[package]
name = "eng-own"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
eng-mir = { path = "../eng-mir" }
eng-hir = { path = "../eng-hir" }
eng-diagnostics = { path = "../eng-diagnostics" }
eng-lexer = { path = "../eng-lexer" }
