[package]
name        = "eng-ownership"
version.workspace    = true
edition.workspace    = true
description = "Englist ownership and borrow checker"

[dependencies]
eng-lexer  = { path = "../eng-lexer" }
eng-parser = { path = "../eng-parser" }
eng-types  = { path = "../eng-types" }
thiserror.workspace = true
