[package]
name        = "eng-types"
version.workspace    = true
edition.workspace    = true
description = "Englist static type system and Hindley-Milner inference"

[dependencies]
eng-lexer  = { path = "../eng-lexer" }
eng-parser = { path = "../eng-parser" }
eng-hir    = { path = "../eng-hir" }
eng-mir    = { path = "../eng-mir" }
thiserror.workspace = true
strsim.workspace = true
indexmap.workspace  = true
