[package]
name        = "vinglish-codegen"
version.workspace    = true
edition.workspace    = true
description = "Vinglish code generation: tree-walking interpreter + C transpiler"

[dependencies]
vinglish-lexer  = { path = "../vinglish-lexer" }
vinglish-parser = { path = "../vinglish-parser" }
vinglish-types  = { path = "../vinglish-types" }
vinglish-hir    = { path = "../vinglish-hir" }
vinglish-mir    = { path = "../vinglish-mir" }
vinglish-decompile = { path = "../vinglish-decompile" }
thiserror.workspace  = true
indexmap.workspace   = true
serde = { workspace = true, features = ["derive"] }
bincode = "1.3.3"
flate2 = "1.1.9"
base64 = "0.22.1"
sha2 = "0.11.0"
