[package]
name        = "vinglish-hir"
version.workspace    = true
edition.workspace    = true
description = "Vinglish High-Level Intermediate Representation"

[dependencies]
serde = { workspace = true, features = ["derive"] }
vinglish-lexer = { path = "../vinglish-lexer" }
vinglish-parser = { path = "../vinglish-parser" }
