[package]
name = "vinglish-mir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
vinglish-hir = { path = "../vinglish-hir" }
vinglish-parser = { path = "../vinglish-parser" }
vinglish-lexer = { path = "../vinglish-lexer" }
