[package]
name = "vinglish-own"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
vinglish-mir = { path = "../vinglish-mir" }
vinglish-hir = { path = "../vinglish-hir" }
vinglish-diagnostics = { path = "../vinglish-diagnostics" }
vinglish-lexer = { path = "../vinglish-lexer" }
