[package]
name        = "vinglish-types"
version.workspace    = true
edition.workspace    = true
description = "Vinglish static type system and Hindley-Milner inference"

[dependencies]
vinglish-lexer  = { path = "../vinglish-lexer" }
vinglish-parser = { path = "../vinglish-parser" }
vinglish-hir    = { path = "../vinglish-hir" }
vinglish-mir    = { path = "../vinglish-mir" }
thiserror.workspace = true
strsim.workspace = true
indexmap.workspace  = true
